fix: Experimenting with contrast

--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -139,11 +139,11 @@ pre {
 	overflow-x: scroll;
 
 	strong {
-		background: #ffff0040;
+		background: #80000080;
 		font-weight: 900;
 	}
 	em {
-		background: #00ff0040;
+		background: #00800060;
 	}
 
 	* {
